2020-12-13  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* poke/pk-mi.c: Add include `errno.h`.
	(mi_loop): Ignore `EINTR` when `select` fails. It's not a fatal error.
	* poke/pk-hserver.c (hserver_thread_worker): Likewise.

2020-12-13  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/pkl-promo.c (pkl_promo_ps_struct_type_field): Skip
	promotion of initializer if it has the same type as the field.
	* testsuite/poke.pkl/struct-types-7.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.h (struct pvm_mapinfo): New type.
	(struct pvm_array): New fields mapinfo and mapinfo_back and remove
	obsolete fields.
	(struct pvm_struct): Likewise.
	(PVM_VAL_ARR_MAPINFO): Define.
	(PVM_VAL_ARR_MAPINFO_BACK): Likewise.
	(PVM_MAPINFO_MAPPED_P): Likewise.
	(PVM_MAPINFO_IOS): Likewise.
	(PVM_MAPINFO_OFFSET): Likewise.
	(PVM_VAL_SCT_MAPINFO): Likewise.
	(PVM_VAL_SCT_MAPINFO_BACK): Likewise.
	(pvm_mapinfo_null): Define.
	* libpoke/pvm-val.c (pvm_make_array): Initialize the mapinfo.
	(pvm_make_struct): Likewise.
	(pvm_val_reloc): Adapt to mapinfo structures.
	(pvm_val_ureloc): Likewise.
	* testsuite/poke.map/ass-map-18.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/valmap-struct-4.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (srefo): New instruction.
	* libpoke/pkl-insn.def: Define PKL_INSN_SREFO.
	* libpoke/pvm-val.c (pvm_refo_struct): New function.
	* libpoke/pvm-val.h: Prototype for pvm_refo_struct.
	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Use srefo instead of
	srefio.
	(LMAP): Make sure the array type has a bounder.
	* testsuite/poke.map/valmap-struct-2.pk: New test.
	* testsuite/poke.map/valmap-struct-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-12  Jose E. Marchesi  <jemarch@gnu.org>
